--- a/P.css
+++ b/P.css
@@ -106,6 +106,24 @@ table{
     color: white;
     transition: 0.7s;
 }
+#print{
+    margin: 20px 0 30px 0;
+    justify-content: center;
+    width: 100px;
+    height: 30px;
+    background-color: rgb(255, 254, 254);
+    color: black;
+    font-size: 15px;
+    border: solid 0;
+    border-radius: 9px;
+    opacity: 0.6;
+    margin-left: 28%;
+}
+#print:hover{
+    background-color: rgb(0, 0, 0);
+    color: white;
+    transition: 0.7s;
+}
 .book{
     margin-left: 20px;
     margin-bottom: 30px;
